--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "@jscrates/api",
-  "version": "1.0.0",
-  "author": "Team JSCrates",
-  "description": "Server for handling requests from JSCrates clients.",
+  "version": "1.1.0",
+  "author": "JSCrates",
+  "description": "Backend for handling requests from JSCrates client.",
   "private": true,
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prettier:check": "prettier --check \"**/*.{js,ts}\"",
+    "prettier:write": "prettier --write \"**/*.{js,ts}\""
   },
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "prisma": "^3.6.0"
   },
   "prettier": {
     "singleQuote": true,
