--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "prettier:write": "prettier --write \"**/*.{js,ts}\""
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.16.1",
     "@prisma/client": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
