--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "mongodb": "^4.2.0",
     "multer": "^1.4.4"
   },
