--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.16.1",
     "@prisma/client": "^3.6.0",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
