--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.3.0",
+  "version": "1.3.0-beta.1",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "jsonschema": "^1.4.0",
     "multer": "^1.4.4"
   },
   "devDependencies": {
