--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.3.0-beta.1",
+  "version": "1.3.0",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
