--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
@@ -13,17 +13,16 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.16.1",
-    "@prisma/client": "^3.6.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonschema": "^1.4.0",
+    "mongoose": "^6.1.4",
     "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1",
-    "prisma": "^3.6.0"
+    "prettier": "^2.5.1"
   },
   "prettier": {
     "singleQuote": true,
