--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.5.0",
+  "version": "1.6.0-beta.1",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
@@ -9,18 +9,21 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "prettier:check": "prettier --check \"**/*.{js,ts}\"",
-    "prettier:write": "prettier --write \"**/*.{js,ts}\""
+    "prettier:write": "prettier --write \"**/*.{js,ts}\"",
+    "test": "mocha"
   },
   "dependencies": {
-    "@google-cloud/storage": "^5.16.1",
-    "axios": "^0.24.0",
-    "dotenv": "^10.0.0",
+    "@google-cloud/storage": "^5.18.1",
+    "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonschema": "^1.4.0",
-    "mongoose": "^6.1.4",
+    "mongoose": "^6.2.0",
     "multer": "^1.4.4"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   },
