--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jscrates/api",
-  "version": "1.6.0-beta.1",
+  "version": "1.6.0",
   "author": "JSCrates",
   "description": "Backend for handling requests from JSCrates client.",
   "private": true,
@@ -13,17 +13,17 @@
     "test": "mocha"
   },
   "dependencies": {
-    "@google-cloud/storage": "^5.18.1",
-    "axios": "^0.25.0",
+    "@google-cloud/storage": "^5.18.2",
+    "axios": "^0.26.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "jsonschema": "^1.4.0",
-    "mongoose": "^6.2.0",
+    "mongoose": "^6.2.2",
     "multer": "^1.4.4"
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   },
